--- a/style.css
+++ b/style.css
@@ -25,3 +25,7 @@ h3 {
     text-decoration: underline;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+
+button {
+    font-size: 1em;
+}
